# robot_properties_bolt

./: .gitignore  CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py
config/: dgm_parameters_bolt.yaml
demos/: demo_display_bolt.py  demo_display_bolt_humanoid.py  demo_display_bolt_humanoid_meshcat.py  demo_display_bolt_meshcat.py  demo_simulate_bolt.py  demo_simulate_bolt_humanoid.py  display_bolt.py
python/robot_properties_bolt/: bolt_wrapper.py  boltwrapper.py  config.py  gepetto_gui_loader.py  pd.py
resource/pre_generated_urdf/: bolt.urdf  plane_with_restitution.urdf
src/robot_properties_bolt/: __init__.py  bolt_humanoid_wrapper.py  bolt_wrapper.py  config.py  gepetto_gui_loader.py  pd.py  resources.py  utils.py
src/robot_properties_bolt/resources/: __init__.py
src/robot_properties_bolt/resources/dynamic_graph_manager/: dgm_parameters_bolt.yaml  dgm_parameters_bolt_humanoid.yaml
src/robot_properties_bolt/resources/odri_control_interface/: bolt_humanoid_driver.yaml
src/robot_properties_bolt/resources/pre_generated_urdf/: bolt.urdf
src/robot_properties_bolt/resources/xacro/: arm.xacro  bolt.urdf.xacro  bolt_humanoid.urdf.xacro  bolt_humanoid.xacro  leg.xacro  plane_with_restitution.urdf.xacro  upper_body.xacro
src/robot_properties_bolt/robot_properties_bolt/: impedance_ctrl.yaml
src/robot_properties_bolt/robot_properties_bolt/dynamic_graph_manager/: dgm_parameters_bolt.yaml
urdf/: bolt.urdf  plane_with_restitution.urdf
xacro/: bolt.urdf.xacro  leg.xacro  plane_with_restitution.urdf.xacro
(+6 files in other folders)
