<?xml version="1.0"?>
<package>
    <name>robot_properties_bolt</name>
    <version>0.0.0</version>
    <description>This package includes the URDF integration of the Bolt robot.</description>

    <author email="exledh@gmail.com">Elham Daneshmand</author>
    <maintainer email="exledh@gmail.com">Elham Daneshmand</maintainer>
    <license>BSD 3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>
    <!-- This provide cmake macros to help building the project. -->
    <build_depend>mpi_cmake_modules</build_depend>
    <run_depend>mpi_cmake_modules</run_depend>
    <!-- We need the xacro package to build the urdf model -->
    <build_depend>xacro</build_depend>
    <run_depend>xacro</run_depend>


    <export>

    </export>
</package>
